--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,12 @@
 	<meta name="author" content="JTT" />
 	<meta name="description" content="JTT Autotech Car Services, MOT, Car repair, Automotive, Maintenance." />
 	
-	<meta property="og:url" content="https://serfix.themetrades.com/react/preview.png" />
+	<meta property="og:url" content="http://www.jttautotech.co.uk" />
 	<meta property="og:site_name" content="JTT Autotech MOT and Car Service Centre"/>
 	<meta property="og:type" content="website" />
 	<meta property="og:locale" content="en_us" />
 	<meta property="og:title" content="JTT Autotech MOT and Car Service Centre" />
 	<meta property="og:description" content="JTT Autotech Car Services, MOT, Car repair, Automotive, Maintenance." />
-	<meta property="og:image" content="https://serfix.themetrades.com/react/preview.png"/>
-	
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:url" content="https://serfix.themetrades.com/react/">
-	<meta name="twitter:creator" content="@themetrades">
-	<meta name="twitter:title" content="JTT Autotech MOT and Car Service Centre">
-	<meta name="twitter:description" content="JTT Autotech Car Services, MOT, Car repair, Automotive, Maintenance.">
 	
 	<meta name="format-detection" content="telephone=yes">
 	
